--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.5.0",
     "cra-template": "1.2.0",
+    "emoji-mart": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
